[gd_scene load_steps=7 format=4 uid="uid://d3ogbl5ossqdh"]

[ext_resource type="Script" uid="uid://cqu7cp2yw22rf" path="res://Levels/main_menu.gd" id="1_yw2i3"]
[ext_resource type="FontFile" uid="uid://beu7bh5g17i6u" path="res://UI/Hello Farmer Font by Keithzo.ttf" id="2_2k6u6"]
[ext_resource type="Theme" uid="uid://blam67opkd3km" path="res://UI/theme.tres" id="3_65ows"]
[ext_resource type="TileSet" uid="uid://du7kqlfor3c0l" path="res://Sprites/Tilemaps/TileSet.tres" id="4_65ows"]
[ext_resource type="PackedScene" uid="uid://d354i6445ugnl" path="res://Entities/MainMenuWalker/MainMenuWalker.tscn" id="5_2ld8x"]

[sub_resource type="LabelSettings" id="LabelSettings_2ld8x"]
font = ExtResource("2_2k6u6")
font_size = 40
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_yw2i3")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAGAAgAAQALAAoAAAAGAAcAAQALAAoAAAAGAAYAAQALAAoAAAAGAAUAAQALAAoAAAAGAAQAAQALAAoAAAAGAAMAAQALAAoAAAAGAAIAAQALAAoAAAAFAAIAAQAIAAkAAAAEAAEAAQAJAAsAAAADAAEAAQAJAAsAAAACAAEAAQAJAAsAAAABAAEAAQAJAAoAAAABAAAAAQAGAAkAAAABAP//AQALAAoAAAABAP7/AQALAAoAAAAAAP7/AQAJAAoAAAAAAP3/AQAKAAgAAAD///3/AQAKAAgAAAD+//3/AQAKAAgAAAD9//3/AQAGAAkAAAD9//7/AQAJAAoAAAD8//7/AQAIAAkAAAD8////AQAIAAkAAAD8/wAAAQAIAAkAAAD9/wAAAQAJAAoAAAD+/wAAAQAJAAoAAAD+////AQAJAAoAAAD/////AQAJAAoAAAD///7/AQAJAAoAAAD+//7/AQAJAAoAAAD9////AQAJAAoAAAAAAP//AQAJAAoAAAAAAAAAAQAJAAoAAAAAAAEAAQAJAAoAAAD//wEAAQAJAAoAAAD//wAAAQAJAAoAAAD//wIAAQAJAAsAAAD+/wIAAQAJAAsAAAD+/wEAAQAJAAoAAAD9/wEAAQAJAAoAAAD9//z/AQALAAoAAAD9//v/AQALAAoAAAD9//r/AQALAAoAAAD9//n/AQALAAgAAAD8//n/AQAKAAgAAAD7//n/AQAKAAgAAAD6//n/AQAKAAgAAAD5//n/AQAKAAgAAAD4//n/AQAGAAkAAAD3//n/AQAIAAkAAAD3//j/AQAIAAkAAAD3//f/AQAIAAkAAAD3//b/AQAIAAkAAAD4//j/AQALAAoAAAD4//f/AQALAAoAAAD4//b/AQALAAoAAAAFAAMAAQAIAAkAAAAFAAQAAQAIAAkAAAAFAAUAAQAIAAkAAAAFAAYAAQAIAAkAAAAFAAcAAQAIAAkAAAAFAAgAAQAIAAkAAAAFAAkAAQAIAAkAAAAGAAkAAQALAAoAAAAGAAEAAQALAAoAAAAGAAAAAQALAAgAAAAFAAAAAQAKAAgAAAAEAAAAAQAKAAgAAAADAAAAAQAKAAgAAAACAAAAAQAKAAgAAAAAAAIAAQAJAAsAAAABAP3/AQALAAgAAAD9/wIAAQAJAAsAAAD8/wIAAQAIAAsAAAD8/wEAAQAIAAkAAAD8//3/AQAIAAkAAAABAAIAAQALAAsAAAD8//z/AQAIAAkAAAD8//v/AQAIAAkAAAD8//r/AQAJAAoAAAD7//r/AQAJAAsAAAD6//r/AQAJAAsAAAD5//r/AQAJAAsAAAD4//r/AQAJAAsAAAD3//r/AQAIAAsAAAAFAAEAAQAFAAoAAAACAAIAAQAJAAIAAAACAAMAAQAJAAIAAAACAAQAAQAJAAIAAAADAAQAAQAJAAIAAAADAAUAAQAJAAIAAAADAAYAAQAJAAIAAAADAAcAAQAJAAIAAAADAAgAAQAJAAIAAAADAAkAAQAJAAIAAAACAAUAAQAJAAIAAAACAAYAAQAJAAIAAAACAAcAAQAJAAIAAAACAAgAAQAJAAIAAAACAAkAAQAJAAIAAAADAAIAAQAJAAIAAAADAAMAAQAJAAIAAAAEAAIAAQAJAAIAAAAEAAMAAQAJAAIAAAAEAAQAAQAJAAIAAAAEAAUAAQAJAAIAAAAEAAYAAQAJAAIAAAAEAAcAAQAJAAIAAAAEAAgAAQAJAAIAAAAEAAkAAQAJAAIAAADy/wMAAQAJAAIAAADy/wQAAQAJAAIAAADy/wUAAQAJAAIAAADy/wYAAQAJAAIAAADy/wcAAQAJAAIAAADy/wgAAQAJAAIAAADy/wkAAQAJAAIAAADz/wMAAQAJAAIAAADz/wQAAQAJAAIAAADz/wUAAQAJAAIAAADz/wYAAQAJAAIAAADz/wcAAQAJAAIAAADz/wgAAQAJAAIAAADz/wkAAQAJAAIAAAD0/wMAAQAJAAIAAAD0/wQAAQAJAAIAAAD0/wUAAQAJAAIAAAD0/wYAAQAJAAIAAAD0/wcAAQAJAAIAAAD0/wgAAQAJAAIAAAD0/wkAAQAJAAIAAAD1/wMAAQAJAAIAAAD1/wQAAQAJAAIAAAD1/wUAAQAJAAIAAAD1/wYAAQAJAAIAAAD1/wcAAQAJAAIAAAD1/wgAAQAJAAIAAAD1/wkAAQAJAAIAAAD2/wMAAQAJAAIAAAD2/wQAAQAJAAIAAAD2/wUAAQAJAAIAAAD2/wYAAQAJAAIAAAD2/wcAAQAJAAIAAAD2/wgAAQAJAAIAAAD2/wkAAQAJAAIAAAD3/wMAAQAJAAIAAAD3/wQAAQAJAAIAAAD3/wUAAQAJAAIAAAD3/wYAAQAJAAIAAAD3/wcAAQAJAAIAAAD3/wgAAQAJAAIAAAD3/wkAAQAJAAIAAAD4/wMAAQAJAAIAAAD4/wQAAQAJAAIAAAD4/wUAAQAJAAIAAAD4/wYAAQAJAAIAAAD4/wcAAQAJAAIAAAD4/wgAAQAJAAIAAAD4/wkAAQAJAAIAAAD5/wMAAQAJAAIAAAD5/wQAAQAJAAIAAAD5/wUAAQAJAAIAAAD5/wYAAQAJAAIAAAD5/wcAAQAJAAIAAAD5/wgAAQAJAAIAAAD5/wkAAQAJAAIAAAD6/wMAAQAJAAIAAAD6/wQAAQAJAAIAAAD6/wUAAQAJAAIAAAD6/wYAAQAJAAIAAAD6/wcAAQAJAAIAAAD6/wgAAQAJAAIAAAD6/wkAAQAJAAIAAAD7/wMAAQAJAAIAAAD7/wQAAQAJAAIAAAD7/wUAAQAJAAIAAAD7/wYAAQAJAAIAAAD7/wcAAQAJAAIAAAD7/wgAAQAJAAIAAAD7/wkAAQAJAAIAAAD8/wMAAQAJAAIAAAD8/wQAAQAJAAIAAAD8/wUAAQAJAAIAAAD8/wYAAQAJAAIAAAD8/wcAAQAJAAIAAAD8/wgAAQAJAAIAAAD8/wkAAQAJAAIAAAD9/wMAAQAJAAIAAAD9/wQAAQAJAAIAAAD9/wUAAQAJAAIAAAD9/wYAAQAJAAIAAAD9/wcAAQAJAAIAAAD9/wgAAQAJAAIAAAD9/wkAAQAJAAIAAAD+/wMAAQAJAAIAAAD+/wQAAQAJAAIAAAD+/wUAAQAJAAIAAAD+/wYAAQAJAAIAAAD+/wcAAQAJAAIAAAD+/wgAAQAJAAIAAAD+/wkAAQAJAAIAAAD//wMAAQAJAAIAAAD//wQAAQAJAAIAAAD//wUAAQAJAAIAAAD//wYAAQAJAAIAAAD//wcAAQAJAAIAAAD//wgAAQAJAAIAAAD//wkAAQAJAAIAAAAAAAMAAQAJAAIAAAAAAAQAAQAJAAIAAAAAAAUAAQAJAAIAAAAAAAYAAQAJAAIAAAAAAAcAAQAJAAIAAAAAAAgAAQAJAAIAAAAAAAkAAQAJAAIAAAABAAMAAQAJAAIAAAABAAQAAQAJAAIAAAABAAUAAQAJAAIAAAABAAYAAQAJAAIAAAABAAcAAQAJAAIAAAABAAgAAQAJAAIAAAABAAkAAQAJAAIAAADy//v/AQAJAAIAAADy//z/AQAJAAIAAADy//3/AQAJAAIAAADy//7/AQAJAAIAAADy////AQAJAAIAAADy/wAAAQAJAAIAAADy/wEAAQAJAAIAAADy/wIAAQAJAAIAAADz//v/AQAJAAIAAADz//z/AQAJAAIAAADz//3/AQAJAAIAAADz//7/AQAJAAIAAADz////AQAJAAIAAADz/wAAAQAJAAIAAADz/wEAAQAJAAIAAADz/wIAAQAJAAIAAAD0//v/AQAJAAIAAAD0//z/AQAJAAIAAAD0//3/AQAJAAIAAAD0//7/AQAJAAIAAAD0////AQAJAAIAAAD0/wAAAQAJAAIAAAD0/wEAAQAJAAIAAAD0/wIAAQAJAAIAAAD1//v/AQAJAAIAAAD1//z/AQAJAAIAAAD1//3/AQAJAAIAAAD1//7/AQAJAAIAAAD1////AQAJAAIAAAD1/wAAAQAJAAIAAAD1/wEAAQAJAAIAAAD1/wIAAQAJAAIAAAD2//v/AQAJAAIAAAD2//z/AQAJAAIAAAD2//3/AQAJAAIAAAD2//7/AQAJAAIAAAD2////AQAJAAIAAAD2/wAAAQAJAAIAAAD2/wEAAQAJAAIAAAD2/wIAAQAJAAIAAAD3//v/AQAJAAIAAAD3//z/AQAJAAIAAAD3//3/AQAJAAIAAAD3//7/AQAJAAIAAAD3////AQAJAAIAAAD3/wAAAQAJAAIAAAD3/wEAAQAJAAIAAAD3/wIAAQAJAAIAAAD4//v/AQAJAAIAAAD4//z/AQAJAAIAAAD4//3/AQAJAAIAAAD4//7/AQAJAAIAAAD4////AQAJAAIAAAD4/wAAAQAJAAIAAAD4/wEAAQAJAAIAAAD4/wIAAQAJAAIAAAD5//v/AQAJAAIAAAD5//z/AQAJAAIAAAD5//3/AQAJAAIAAAD5//7/AQAJAAIAAAD5////AQAJAAIAAAD5/wAAAQAJAAIAAAD5/wEAAQAJAAIAAAD5/wIAAQAJAAIAAAD6//v/AQAJAAIAAAD6//z/AQAJAAIAAAD6//3/AQAJAAIAAAD6//7/AQAJAAIAAAD6////AQAJAAIAAAD6/wAAAQAJAAIAAAD6/wEAAQAJAAIAAAD6/wIAAQAJAAIAAAD7//v/AQAJAAIAAAD7//z/AQAJAAIAAAD7//3/AQAJAAIAAAD7//7/AQAJAAIAAAD7////AQAJAAIAAAD7/wAAAQAJAAIAAAD7/wEAAQAJAAIAAAD7/wIAAQAJAAIAAADy//b/AQAJAAIAAADy//f/AQAJAAIAAADy//j/AQAJAAIAAADy//n/AQAJAAIAAADy//r/AQAJAAIAAADz//b/AQAJAAIAAADz//f/AQAJAAIAAADz//j/AQAJAAIAAADz//n/AQAJAAIAAADz//r/AQAJAAIAAAD0//b/AQAJAAIAAAD0//f/AQAJAAIAAAD0//j/AQAJAAIAAAD0//n/AQAJAAIAAAD0//r/AQAJAAIAAAD1//b/AQAJAAIAAAD1//f/AQAJAAIAAAD1//j/AQAJAAIAAAD1//n/AQAJAAIAAAD1//r/AQAJAAIAAAD2//b/AQAJAAIAAAD2//f/AQAJAAIAAAD2//j/AQAJAAIAAAD2//n/AQAJAAIAAAD2//r/AQAJAAIAAAD5//b/AQAJAAIAAAD5//f/AQAJAAIAAAD5//j/AQAJAAIAAAD6//b/AQAJAAIAAAD6//f/AQAJAAIAAAD6//j/AQAJAAIAAAD7//b/AQAJAAIAAAD7//f/AQAJAAIAAAD7//j/AQAJAAIAAAD8//b/AQAJAAIAAAD8//f/AQAJAAIAAAD8//j/AQAJAAIAAAD9//b/AQAJAAIAAAD9//f/AQAJAAIAAAD9//j/AQAJAAIAAAD+//b/AQAJAAIAAAD+//f/AQAJAAIAAAD+//j/AQAJAAIAAAD///b/AQAJAAIAAAD///f/AQAJAAIAAAD///j/AQAJAAIAAAAAAPb/AQAJAAIAAAAAAPf/AQAJAAIAAAAAAPj/AQAJAAIAAAABAPb/AQAJAAIAAAABAPf/AQAJAAIAAAABAPj/AQAJAAIAAAACAPb/AQAJAAIAAAACAPf/AQAJAAIAAAACAPj/AQAJAAIAAAADAPb/AQAJAAIAAAADAPf/AQAJAAIAAAADAPj/AQAJAAIAAAAEAPb/AQAJAAIAAAAEAPf/AQAJAAIAAAAEAPj/AQAJAAIAAAAFAPb/AQAJAAIAAAAFAPf/AQAJAAIAAAAFAPj/AQAJAAIAAAAGAPb/AQAJAAIAAAAGAPf/AQAJAAIAAAAGAPj/AQAJAAIAAAAHAPb/AQAJAAIAAAAHAPf/AQAJAAIAAAAHAPj/AQAJAAIAAAAIAPb/AQAJAAIAAAAIAPf/AQAJAAIAAAAIAPj/AQAJAAIAAAAJAPb/AQAJAAIAAAAJAPf/AQAJAAIAAAAJAPj/AQAJAAIAAAAKAPb/AQAJAAIAAAAKAPf/AQAJAAIAAAAKAPj/AQAJAAIAAAALAPb/AQAJAAIAAAALAPf/AQAJAAIAAAALAPj/AQAJAAIAAAAMAPb/AQAJAAIAAAAMAPf/AQAJAAIAAAAMAPj/AQAJAAIAAAANAPb/AQAJAAIAAAANAPf/AQAJAAIAAAANAPj/AQAJAAIAAAD+//n/AQAJAAIAAAD+//r/AQAJAAIAAAD+//v/AQAJAAIAAAD+//z/AQAJAAIAAAD///n/AQAJAAIAAAD///r/AQAJAAIAAAD///v/AQAJAAIAAAD///z/AQAJAAIAAAAAAPn/AQAJAAIAAAAAAPr/AQAJAAIAAAAAAPv/AQAJAAIAAAAAAPz/AQAJAAIAAAABAPn/AQAJAAIAAAABAPr/AQAJAAIAAAABAPv/AQAJAAIAAAABAPz/AQAJAAIAAAACAPn/AQAJAAIAAAACAPr/AQAJAAIAAAACAPv/AQAJAAIAAAACAPz/AQAJAAIAAAADAPn/AQAJAAIAAAADAPr/AQAJAAIAAAADAPv/AQAJAAIAAAADAPz/AQAJAAIAAAAEAPn/AQAJAAIAAAAEAPr/AQAJAAIAAAAEAPv/AQAJAAIAAAAEAPz/AQAJAAIAAAAFAPn/AQAJAAIAAAAFAPr/AQAJAAIAAAAFAPv/AQAJAAIAAAAFAPz/AQAJAAIAAAAGAPn/AQAJAAIAAAAGAPr/AQAJAAIAAAAGAPv/AQAJAAIAAAAGAPz/AQAJAAIAAAAHAPn/AQAJAAIAAAAHAPr/AQAJAAIAAAAHAPv/AQAJAAIAAAAHAPz/AQAJAAIAAAAIAPn/AQAJAAIAAAAIAPr/AQAJAAIAAAAIAPv/AQAJAAIAAAAIAPz/AQAJAAIAAAAJAPn/AQAJAAIAAAAJAPr/AQAJAAIAAAAJAPv/AQAJAAIAAAAJAPz/AQAJAAIAAAAKAPn/AQAJAAIAAAAKAPr/AQAJAAIAAAAKAPv/AQAJAAIAAAAKAPz/AQAJAAIAAAALAPn/AQAJAAIAAAALAPr/AQAJAAIAAAALAPv/AQAJAAIAAAALAPz/AQAJAAIAAAAMAPn/AQAJAAIAAAAMAPr/AQAJAAIAAAAMAPv/AQAJAAIAAAAMAPz/AQAJAAIAAAANAPn/AQAJAAIAAAANAPr/AQAJAAIAAAANAPv/AQAJAAIAAAANAPz/AQAJAAIAAAACAP3/AQAJAAIAAAACAP7/AQAJAAIAAAACAP//AQAJAAIAAAADAP3/AQAJAAIAAAADAP7/AQAJAAIAAAADAP//AQAJAAIAAAAEAP3/AQAJAAIAAAAEAP7/AQAJAAIAAAAEAP//AQAJAAIAAAAFAP3/AQAJAAIAAAAFAP7/AQAJAAIAAAAFAP//AQAJAAIAAAAGAP3/AQAJAAIAAAAGAP7/AQAJAAIAAAAGAP//AQAJAAIAAAAHAP3/AQAJAAIAAAAHAP7/AQAJAAIAAAAHAP//AQAJAAIAAAAIAP3/AQAJAAIAAAAIAP7/AQAJAAIAAAAIAP//AQAJAAIAAAAJAP3/AQAJAAIAAAAJAP7/AQAJAAIAAAAJAP//AQAJAAIAAAAKAP3/AQAJAAIAAAAKAP7/AQAJAAIAAAAKAP//AQAJAAIAAAALAP3/AQAJAAIAAAALAP7/AQAJAAIAAAALAP//AQAJAAIAAAAMAP3/AQAJAAIAAAAMAP7/AQAJAAIAAAAMAP//AQAJAAIAAAANAP3/AQAJAAIAAAANAP7/AQAJAAIAAAANAP//AQAJAAIAAAAHAAAAAQAJAAIAAAAHAAEAAQAJAAIAAAAHAAIAAQAJAAIAAAAHAAMAAQAJAAIAAAAHAAQAAQAJAAIAAAAHAAUAAQAJAAIAAAAHAAYAAQAJAAIAAAAHAAcAAQAJAAIAAAAHAAgAAQAJAAIAAAAHAAkAAQAJAAIAAAAIAAAAAQAJAAIAAAAIAAEAAQAJAAIAAAAIAAIAAQAJAAIAAAAIAAMAAQAJAAIAAAAIAAQAAQAJAAIAAAAIAAUAAQAJAAIAAAAIAAYAAQAJAAIAAAAIAAcAAQAJAAIAAAAIAAgAAQAJAAIAAAAIAAkAAQAJAAIAAAAJAAAAAQAJAAIAAAAJAAEAAQAJAAIAAAAJAAIAAQAJAAIAAAAJAAMAAQAJAAIAAAAJAAQAAQAJAAIAAAAJAAUAAQAJAAIAAAAJAAYAAQAJAAIAAAAJAAcAAQAJAAIAAAAJAAgAAQAJAAIAAAAJAAkAAQAJAAIAAAAKAAAAAQAJAAIAAAAKAAEAAQAJAAIAAAAKAAIAAQAJAAIAAAAKAAMAAQAJAAIAAAAKAAQAAQAJAAIAAAAKAAUAAQAJAAIAAAAKAAYAAQAJAAIAAAAKAAcAAQAJAAIAAAAKAAgAAQAJAAIAAAAKAAkAAQAJAAIAAAALAAAAAQAJAAIAAAALAAEAAQAJAAIAAAALAAIAAQAJAAIAAAALAAMAAQAJAAIAAAALAAQAAQAJAAIAAAALAAUAAQAJAAIAAAALAAYAAQAJAAIAAAALAAcAAQAJAAIAAAALAAgAAQAJAAIAAAALAAkAAQAJAAIAAAAMAAAAAQAJAAIAAAAMAAEAAQAJAAIAAAAMAAIAAQAJAAIAAAAMAAMAAQAJAAIAAAAMAAQAAQAJAAIAAAAMAAUAAQAJAAIAAAAMAAYAAQAJAAIAAAAMAAcAAQAJAAIAAAAMAAgAAQAJAAIAAAAMAAkAAQAJAAIAAAANAAAAAQAJAAIAAAANAAEAAQAJAAIAAAANAAIAAQAJAAIAAAANAAMAAQAJAAIAAAANAAQAAQAJAAIAAAANAAUAAQAJAAIAAAANAAYAAQAJAAIAAAANAAcAAQAJAAIAAAANAAgAAQAJAAIAAAANAAkAAQAJAAIAAAA=")
tile_set = ExtResource("4_65ows")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAEAPf/CQAAAAAAAAAEAPj/CQAAAAEAAAAEAPn/CQAAAAIAAAAFAPf/CQABAAAAAAAFAPj/CQABAAEAAAAFAPn/CQABAAIAAAAIAP//CQAAAAAAAAAIAAAACQAAAAEAAAAIAAEACQAAAAIAAAAJAP//CQABAAAAAAAJAAAACQABAAEAAAAJAAEACQABAAIAAAD2/wIACQACAAAAAAD2/wMACQACAAEAAAD2/wQACQACAAIAAAD3/wIACQADAAAAAAD3/wMACQADAAEAAAD3/wQACQADAAIAAAD1//z/CQAAAAYAAAD1//3/CQAAAAcAAAD2//z/CQABAAYAAAD2//3/CQABAAcAAAD5//7/CQAAAAYAAAD5////CQAAAAcAAAD6//7/CQABAAYAAAD6////CQABAAcAAAD8//f/CQAAAAYAAAD8//j/CQAAAAcAAAD9//f/CQABAAYAAAD9//j/CQABAAcAAAD0//f/CAADAAYAAAD0//j/CAADAAcAAAD1//f/CAAEAAYAAAD1//j/CAAEAAcAAAD2//f/CAAFAAYAAAD2//j/CAAFAAcAAAAHAAUACAADAAAAAAAHAAYACAADAAEAAAAIAAUACAAEAAAAAAAIAAYACAAEAAEAAAAJAAUACAAFAAAAAAAJAAYACAAFAAEAAAD7/wYACAADAAgAAAD7/wcACAADAAkAAAD8/wYACAAEAAgAAAD8/wcACAAEAAkAAAD9/wYACAAFAAgAAAD9/wcACAAFAAkAAAD3////CgABAAAAAAAFAP3/CgABAAAAAAD///j/CgABAAAAAAD3//v/CgABAAAAAAAEAAUACgABAAAAAAD8/wQACgABAAAAAAD4/wYACgABAAAAAAD7/wUACgAFAAAAAAD4/wEACgAFAAAAAAACAP3/CgAFAAAAAAAAAPv/CgAFAAAAAAAJAPr/CgAFAAAAAAAJAPf/CgAFAAAAAAD6//z/CgAHAAAAAADz//v/CgAHAAAAAAD1/wcACgAHAAAAAAALAAMACgAHAAAAAAAKAPz/CgAHAAAAAAABAPf/CgAMAAAAAAD0////CgAMAAAAAAD7/wMACgAMAAAAAAAJAAMACgAMAAAAAAADAAMACgAJAAEAAAABAAYACgAJAAEAAAD//wgACgAJAAEAAAD6/wMACgAHAAMAAAAKAP3/CgAHAAMAAAD7//f/CgAOAAAAAAD7//7/CgAOAAAAAAAHAAEACgAOAAAAAAD1/wQACgAQAAAAAAD2/wAACgAQAAAAAAAHAPr/CgAQAAAAAAD5//f/CgAQAAAAAAAEAAcACgASAAAAAAALAAgACgASAAAAAAAHAAMACgATAAAAAAD2/wUACgABAAEAAAAGAP7/CgABAAEAAAD6//j/CgABAAEAAAD1//r/CgAEAAEAAAAHAPz/CgAEAAEAAAAGAPj/CgAEAAEAAAAAAAQACgAEAAEAAAD+//7/CgAEAAYAAAAFAAEACgAAAAYAAAD+/wEACgAAAAYAAAAFAAMACgAGAAYAAAD4//n/CgAFAAYAAAD8//v/CgAFAAYAAAABAAAACgAFAAYAAAAIAPj/BQAAAAAAAAAIAPn/BQAAAAEAAAA=")
tile_set = ExtResource("4_65ows")

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="Walkers" type="Node2D" parent="."]

[node name="MainMenuWalker" parent="Walkers" instance=ExtResource("5_2ld8x")]
position = Vector2(130, -113)
sprite_type = 1

[node name="MainMenuWalker2" parent="Walkers" instance=ExtResource("5_2ld8x")]
position = Vector2(144, -106)
sprite_type = 1

[node name="MainMenuWalker3" parent="Walkers" instance=ExtResource("5_2ld8x")]
position = Vector2(133, -98)
sprite_type = 1

[node name="MainMenuWalker4" parent="Walkers" instance=ExtResource("5_2ld8x")]
position = Vector2(141, -114)
sprite_type = 1

[node name="MainMenuWalker5" parent="Walkers" instance=ExtResource("5_2ld8x")]
position = Vector2(136, -104)
sprite_type = 1

[node name="MainMenuWalker6" parent="Walkers" instance=ExtResource("5_2ld8x")]
position = Vector2(-105, 65)
sprite_type = 2

[node name="MainMenuWalker7" parent="Walkers" instance=ExtResource("5_2ld8x")]
position = Vector2(-166, -122)
sprite_type = 2

[node name="MainMenuWalker8" parent="Walkers" instance=ExtResource("5_2ld8x")]
position = Vector2(162, 56)
sprite_type = 3

[node name="MainMenuWalker9" parent="Walkers" instance=ExtResource("5_2ld8x")]
position = Vector2(15, -42)
sprite_type = 4

[node name="MainMenuWalker10" parent="Walkers" instance=ExtResource("5_2ld8x")]
position = Vector2(-25, -22)

[node name="MainMenuWalker11" parent="Walkers" instance=ExtResource("5_2ld8x")]
position = Vector2(-9, -102)
sprite_type = 2

[node name="MainMenuWalker12" parent="Walkers" instance=ExtResource("5_2ld8x")]
position = Vector2(-12, 144)

[node name="MainMenuWalker13" parent="Walkers" instance=ExtResource("5_2ld8x")]
position = Vector2(129, -106)
sprite_type = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -160.0
offset_right = 208.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_top = 48.0
offset_right = 416.0
offset_bottom = 118.0
text = "Runnin' Men"
label_settings = SubResource("LabelSettings_2ld8x")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartGame" type="Button" parent="Control"]
layout_mode = 0
offset_left = 160.0
offset_top = 215.0
offset_right = 256.0
offset_bottom = 231.0
theme = ExtResource("3_65ows")
theme_override_font_sizes/font_size = 10
text = "Start Game"

[node name="TestLevel" type="Button" parent="Control"]
layout_mode = 0
offset_left = 160.0
offset_top = 234.0
offset_right = 256.0
offset_bottom = 250.0
theme = ExtResource("3_65ows")
theme_override_font_sizes/font_size = 10
text = "Test Level"

[node name="Credits" type="Button" parent="Control"]
layout_mode = 0
offset_left = 160.0
offset_top = 253.0
offset_right = 256.0
offset_bottom = 269.0
theme = ExtResource("3_65ows")
theme_override_font_sizes/font_size = 10
text = "Credits"

[node name="Exit" type="Button" parent="Control"]
layout_mode = 0
offset_left = 160.0
offset_top = 272.0
offset_right = 256.0
offset_bottom = 288.0
theme = ExtResource("3_65ows")
theme_override_font_sizes/font_size = 10
text = "Exit"

[connection signal="pressed" from="Control/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Control/TestLevel" to="." method="_on_test_level_pressed"]
[connection signal="pressed" from="Control/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_exit_pressed"]
